fix more sonar violations